# culicidaelab-server

./: .bandit  .dockerignore  .env  .env.dev  .env.local  .env.prod  .env.production  .env.production.template  .flake8  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .ruff.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCKER-HUB-DEPLOYMENT.md  LICENSE  Makefile  README.md  __init__.py  __main__.py  app.py  app_test.py  debug-frontend-connectivity.sh  debug-ssl-gateway.sh  debug-ssl-production.sh  deploy-ssl-simple.sh  docker-compose.custom-ports.yml  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.monitoring-remote.yml  docker-compose.monitoring.yml  docker-compose.prebuilt.yml  docker-compose.prod.yml  docker-compose.prod_simple.yml  docker-compose.ssl-simple.yml  docker-compose.ssl.yml  fix-ssl-gateway.sh  fix-ssl-proxy-headers.sh  frontend_test_fixes_summary.md  (+21 more)
.VSCodeCounter/2025-05-19_19-12-42/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.github/workflows/: docs-qa.yml  docs.yml  pages.yml
backend/: .dockerignore  .env  .env.docker  .env.example  Dockerfile  config.py  database.py  dependencies.py  entrypoint.sh  logging_config.py  main.py  models.py  readme.md
backend/database_utils/: lancedb_manager.py  (+2 more)
culicidaelab_server/: config.py  main.py  state.py
docker/: .env.example  .env.production.template
docs/: .gitignore  DOCUMENTATION_CHECKLIST.md  README.md  index.md  offline.html  sw.js
en/: 404.html  index.html  objects.inv  offline.html  sitemap.xml
frontend/: .dockerignore  Dockerfile  Dockerfile.broken  Dockerfile.flexible  Dockerfile.jupyter  Dockerfile.old  Dockerfile.old2  Dockerfile.simple  config.py  docker-entrypoint.py  main.py  state.py
load_tests/: load_test_diseases.js  load_test_filter_options.js  load_test_species_detail.js  load_test_vector_species.js  stress_test_disease_detail.js  stress_test_filter_options.js  stress_test_geo_observations.js  stress_test_species.js  stress_test_species_detail.js  stress_test_vector_species.js  summary_load_test_disease_detail.html  summary_load_test_disease_vectors.html  summary_load_test_geo_observations.html  summary_load_test_species.html  summary_load_test_species_detail.html  summary_load_test_vector_species.html  summary_stress_test_disease_vectors.html  summary_stress_test_diseases.html  summary_stress_test_species_detail.html  summary_stress_test_vector_species.html
nginx/: .dockerignore  Dockerfile  Dockerfile.dev  Dockerfile.local  Dockerfile.with-certbot  README-certbot-integration.md  nginx-ssl.conf  nginx.conf  nginx.dev.conf  nginx.local.conf
ru/: 404.html  index.html  objects.inv  sitemap.xml  sw.js
scripts/: README.md  backup.sh  build-and-push.ps1  build-and-push.sh  build-docker.ps1  build-frontend-only.ps1  build-images.sh  build-nginx-ssl.sh  build_docs.py  certbot-cron  certbot-renewal.service  certbot-renewal.timer  check_links.py  content_translator.py  debug-frontend.ps1  debug-local.ps1  debug-production.sh  debug-static.ps1  demo_translation.py  deploy-production.ps1  deploy-production.sh  deploy-remote-monitoring.sh  deploy-ssl.sh  deploy.sh  directory_scanner.py  doc_coverage.py  doc_dashboard.py  docker-workflow.md  fix-frontend-ssl.sh  fix-production-permissions.sh  fix-ssl-proxy-headers.ps1  health-check.sh  health_monitor.py  init-letsencrypt.sh  install-renewal.sh  log_aggregator.py  markdown_parser.py  metadata_translator.py  performance-monitor.py  production-logs.sh  (+32 more)
tests/: conftest.py
translations/: home.en.yaml  layout.en.yml
tree-maker/: 20250509180247672-tree.md  20250511181621265-tree.md  20250512001151416-tree.md  20250512001204032-tree.md  20250512142632518-tree.md  20250512142652413-tree.md
(+579 files in other folders)
