[project]
name = "culicidaelab-server"
version = "0.1.0"
description = "Add your awesome app description here"
readme = "README.md"
requires-python = ">=3.11.0"
dependencies = [
    "anywidget>=0.9.18",
    "colorcet>=3.1.0",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "ipyleaflet>=0.19.2",
    "lancedb>=0.22.0",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "pyarrow>=20.0.0",
    "pydantic-settings>=2.9.1",
    "pylance>=0.26.1",
    "python-dotenv>=1.1.0",
    "python-i18n[yaml]>=0.3.9",
    "shapely>=2.1.0",
    "solara[assets]==1.37.1",
]
[dependency-groups]
dev = [
    "black>=24.10.0",
    "crawl4ai>=0.6.2",
    "culicidaelab-server",
    "docxtpl>=0.20.0",
    "ipykernel>=6.29.5",
    "isort>=5.13.2",
    "mypy>=1.13.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pre-commit>=4.0.1",
    "pytest>=8.3.3",
    "pytest-cov>=6.0.0",
    "ruff>=0.7.4",
]

[tool.uv.sources]
culicidaelab-server = { workspace = true }

[tool.mypy]

