[project]
name = "culicidaelab-server"
version = "0.1.0"
description = "CulicidaeLab server"
readme = "README.md"
requires-python = ">=3.11.0"
dependencies = [
    "aiofiles>=24.1.0",
    "anywidget>=0.9.18",
    "colorcet>=3.1.0",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "ipyleaflet>=0.19.2",
    "lancedb>=0.22.0",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "pyarrow>=20.0.0",
    "pydantic-settings>=2.9.1",
    "pylance>=0.26.1",
    "python-dotenv>=1.1.0",
    "python-i18n[yaml]>=0.3.9",
    "python-multipart>=0.0.20",
    "shapely>=2.1.0",
    "solara[assets]==1.50.1",
    "culicidaelab>=0.3.0",
]
[project.optional-dependencies]
dev = [
    "black>=24.10.0",
    "docxtpl>=0.20.0",
    "ipykernel>=6.16.2, <=6.29.5",
    "isort>=5.13.2",
    "mypy>=1.13.0",
    "openpyxl>=3.1.5",
    "pre-commit>=4.0.1",
    "pytest-asyncio>=1.0.0",
    "pytest>=8.3.3",
    "pytest-cov>=6.0.0",
    "psutil>=7.0.0",
    "tabulate>=0.9.0",
    "types-aiofiles>=24.1.0.20250822",
    "pytest-mock>=3.15.1",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material[imaging]>=9.5.0",
    "mkdocstrings[python]>=0.26.0",
    "mkdocs-mermaid2-plugin>=1.1.0",
    "mkdocs-git-revision-date-localized-plugin>=1.3.0",
    "mkdocs-swagger-ui-tag>=0.6.0",
    "pymdown-extensions>=10.11.0",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-redirects>=1.2.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "markdown>=3.6.0",
    "pyyaml>=6.0.0",
]

[tool.uv.sources]
culicidaelab-server = { workspace = true }


[tool.setuptools]
packages = ["frontend", "backend"]
